// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not log you in if no pin is supplied 1`] = `
SkillResponse {
  "response": Object {
    "outputSpeech": Object {
      "ssml": "<speak>Please provide a pin. To reset your pin, re-link your Canvas account with this skill.</speak>",
      "type": "SSML",
    },
    "shouldEndSession": true,
  },
  "sessionAttributes": Object {},
  "userAgent": "ask-node/2.7.0 Node/v8.16.1",
  "version": "1.0",
}
`;

exports[`does not log you in if the pin is invalid 1`] = `
SkillResponse {
  "response": Object {
    "outputSpeech": Object {
      "ssml": "<speak>Pin login failed. Please try again. To reset your pin, re-link your Canvas account with this skill.</speak>",
      "type": "SSML",
    },
    "shouldEndSession": true,
  },
  "sessionAttributes": Object {},
  "userAgent": "ask-node/2.7.0 Node/v8.16.1",
  "version": "1.0",
}
`;

exports[`logs you in with a pin 1`] = `
SkillResponse {
  "response": Object {
    "outputSpeech": Object {
      "ssml": "<speak>Pin login successful. The Canvas skill is unlocked for ten minutes.</speak>",
      "type": "SSML",
    },
    "shouldEndSession": true,
  },
  "sessionAttributes": Object {},
  "userAgent": "ask-node/2.7.0 Node/v8.16.1",
  "version": "1.0",
}
`;
